--- a/src/clockwork-app/src/app/home/home.component.html
+++ b/src/clockwork-app/src/app/home/home.component.html
@@ -1,2 +1,18 @@
-<p *ngIf="workers && workers.length > 0">Here be workers.</p>
-<p *ngIf="!workers || workers.length === 0">Here be no workers.</p>
+<p *ngIf="workers && workers.length > 0">
+  <a *ngFor="let worker of workers" [routerLink]="['worker', worker.id]">
+    {{ worker.name }}
+  </a>
+</p>
+<p *ngIf="!workers || workers.length === 0">Es wurden noch keine Teilnehmer an der Arbeitszeiterfassung angelegt.</p>
+
+<form class="new-worker-form">
+  <mat-form-field>
+    <input matInput placeholder="Vorname" value="Vorname">
+  </mat-form-field>
+
+  <mat-form-field color="primary" class="full-width">
+    <mat-label>Nachname</mat-label>
+    <input matInput placeholder="Nachname" [(ngModel)]="newWorker.familyName" name="familyName">
+  </mat-form-field>
+
+</form>
