--- a/src/clockwork-app/src/app/worker-detail/worker-detail.component.html
+++ b/src/clockwork-app/src/app/worker-detail/worker-detail.component.html
@@ -1,3 +1,6 @@
 <p>
-  worker-detail works!
+  {{worker.familyName}}<br/>
+  {{worker.givenName}}<br/>
+  {{worker.dateOfBirth | date: 'medium' }}
 </p>
+
